; ModuleID = '/home/carl/AnghaBench/vlc/src/os2/extr_thread.c_vlc_select.c'
source_filename = "/home/carl/AnghaBench/vlc/src/os2/extr_thread.c_vlc_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32 }
%struct.vlc_thread = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*, i32*, %struct.timeval*)* @vlc_select to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vlc_select(i32 %0, i32* %1, i32* %2, i32* %3, %struct.timeval* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.timeval*, align 8
  %11 = alloca %struct.vlc_thread*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store %struct.timeval* %4, %struct.timeval** %10, align 8
  %13 = call %struct.vlc_thread* (...) @vlc_thread_self()
  store %struct.vlc_thread* %13, %struct.vlc_thread** %11, align 8
  %14 = load %struct.vlc_thread*, %struct.vlc_thread** %11, align 8
  %15 = icmp ne %struct.vlc_thread* %14, null
  br i1 %15, label %16, label %28

16:                                               ; preds = %5
  %17 = load %struct.vlc_thread*, %struct.vlc_thread** %11, align 8
  %18 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @FD_SET(i64 %19, i32* %20)
  %22 = load i32, i32* %6, align 4
  %23 = load %struct.vlc_thread*, %struct.vlc_thread** %11, align 8
  %24 = getelementptr inbounds %struct.vlc_thread, %struct.vlc_thread* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add nsw i64 %25, 1
  %27 = call i32 @MAX(i32 %22, i64 %26)
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %16, %5
  %29 = load i32, i32* %6, align 4
  %30 = load i32*, i32** %7, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i32*, i32** %9, align 8
  %33 = load %struct.timeval*, %struct.timeval** %10, align 8
  %34 = call i32 @select(i32 %29, i32* %30, i32* %31, i32* %32, %struct.timeval* %33)
  store i32 %34, i32* %12, align 4
  %35 = call i32 (...) @vlc_testcancel()
  %36 = load i32, i32* %12, align 4
  ret i32 %36
}

declare dso_local %struct.vlc_thread* @vlc_thread_self(...) #1

declare dso_local i32 @FD_SET(i64, i32*) #1

declare dso_local i32 @MAX(i32, i64) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i32 @vlc_testcancel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
